// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

//
// == Kalix TCK model test for value-based entities ==
// see tck/src/main/scala/kalix/tck/EntityTCK.scala

syntax = "proto3";

package kalix.tck.model.valueentity;

option java_package = "kalix.tck.model.valueentity";
option java_multiple_files = true;

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "kalix/tck/model/valueentity/value_entity_api.proto";



//
// The `ValueEntityConfigured` service is for testing entity configuration from the language support:
//
// - The entity persistence-id must be `value-entity-configured`.
// - The passivation strategy must be set with a timeout of 100 millis.
// - The `Call` method is not required to do anything, and must return an empty `Response` message.
//
service ValueEntityConfigured {
  option (kalix.codegen) = {
    value_entity: {
      name: "ValueEntityConfiguredEntity"
      type_id: "value-entity-configured"
      state: "Persisted"
    }
  };
  rpc Call(Request) returns (Response);
}
